--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -1,5 +1,128 @@
-@import "../../styles/common.scss";
+@import '../../styles/common.scss';
+@import '~font-awesome/scss/font-awesome';
+$fa-font-path: '~font-awesome/fonts';
 
 .Nav {
-  @include flex-cloumn-center ;
+  @include flex-center;
+  width: 100%;
+  height: 62px;
+  padding: 0 15px;
+  border-bottom: 1px solid #eeeeee;
+  color: $grey;
+  font-family: roboto;
+  font-size: 15px;
+
+  .navWrapper {
+    @include flex-spaceBetween-center;
+    width: 1320px;
+    min-width: 500px;
+
+    .navLeft {
+      @include flex-spaceBetween-center;
+
+      .gotchapediaLogo {
+        height: 36px;
+        width: 150px;
+        object-fit: cover;
+      }
+
+      .mytaste {
+        margin: 0 24px;
+      }
+    }
+    .navRight {
+      @include flex-spaceBetween-center;
+
+      .magnifierIcon {
+        display: none;
+      }
+
+      .inputBox {
+        display: flex;
+        align-items: center;
+        background-color: $lightgrey;
+        border-radius: 2px;
+        padding: 7px 10px 8px 0px;
+        width: 300px;
+        height: 38px;
+        .searchIcon {
+          color: #cbccd0;
+          width: 10px;
+          height: 10px;
+          margin: 0 10px;
+        }
+        .searchInput {
+          background-color: $lightgrey;
+          width: 100%;
+          height: 24px;
+        }
+      }
+      .loginBtn {
+        margin: 0 24px;
+        background-color: white;
+        color: $grey;
+        cursor: pointer;
+      }
+
+      .signupBtn {
+        background-color: white;
+        width: 80px;
+        height: 32px;
+        border: 1px solid #cbccd0;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      .rate {
+        display: none;
+      }
+
+      .starIcon {
+        display: none;
+      }
+
+      &:login {
+        .profile {
+          @include smallProfile;
+          object-fit: cover;
+          .star {
+            display: none;
+          }
+        }
+      }
+    }
+
+    .navRight {
+      @include flex-spaceBetween-center;
+      .profile {
+        display: none;
+      }
+    }
+  }
+}
+
+.displayNone {
+  display: none;
+}
+
+@media screen and (max-width: 860px) {
+  .Nav .navWrapper .navRight {
+    .magnifierIcon {
+      display: block;
+    }
+    .inputBox {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .Nav {
+    border: none;
+    .navWrapper {
+      .navRight {
+        display: none;
+      }
+    }
+  }
 }
