--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&family=Roboto:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&family=Roboto:wght@400;500&display=swap");
 
 * {
   text-decoration: none;
@@ -7,7 +7,7 @@
 
 html {
   color: #000;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: 400;
   font-size: 14px;
   outline: none;
@@ -57,8 +57,8 @@ $lightyellow: #ffdd64;
 /* movie img size */
 
 @mixin bigSize {
-  width: 12.75em;
-  height: 18.5em;
+  width: 15.574em;
+  height: 22.696em;
   border: 1px solid #74747b;
   border-radius: 3px;
 }
