--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&family=Roboto:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&family=Roboto:wght@400;500&display=swap');
 
 * {
   text-decoration: none;
@@ -7,7 +7,7 @@
 
 html {
   color: #000;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: 400;
   font-size: 14px;
   outline: none;
@@ -50,7 +50,7 @@ $lightyellow: #ffdd64;
   background-color: #000;
   font-family: roboto;
   font-weight: 900;
-  border-radius: 3px;
+  border-radius: 5px;
   opacity: 0.8;
 }
 
@@ -60,21 +60,21 @@ $lightyellow: #ffdd64;
   width: 15.574em;
   height: 22.696em;
   border: 1px solid #74747b;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 @mixin mediumSize {
   width: 10.1em;
   height: 14.6em;
   border: 1px solid #74747b;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 @mixin smallSize {
   width: 7.4em;
   height: 10.8em;
   border: 1px solid #74747b;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 button,
