--- a/src/pages/MovieDetail/MovieSide/movieSide.scss
+++ b/src/pages/MovieDetail/MovieSide/movieSide.scss
@@ -7,6 +7,7 @@
   // min-width: 1023px;
   background-color: #fff;
   border-radius: 5px;
+  border: 1px solid #ddd;
 
   .galleryWrapper {
     .galleryHeading {
@@ -19,7 +20,7 @@
       width: 132px;
       height: 89px;
       margin: 10px;
-      border-radius: 3px;
+      border-radius: 5px;
     }
   }
 
@@ -42,7 +43,7 @@
           width: 132px;
           height: 89px;
           margin: 10px;
-          border-radius: 3px;
+          border-radius: 5px;
         }
 
         .videoDetail {
