--- a/src/pages/MovieDetail/movieDetail.scss
+++ b/src/pages/MovieDetail/movieDetail.scss
@@ -2,6 +2,8 @@
 
 .MovieDetailPage {
   // min-width: 719px;
+  display: flex;
+  flex-direction: column;
 
   .MovieHeaderWrapper {
     // min-width: 719px;
