--- a/src/pages/MovieDetail/MovieContent/CastingList/castingList.scss
+++ b/src/pages/MovieDetail/MovieContent/CastingList/castingList.scss
@@ -2,27 +2,29 @@
 
 .castingContentList {
   // 여기 왜 flex가 안먹음??
-  // display: flex;
-
-  // 배경색은 먹는데??
-  // background-color: red;
-
-  // slick-slide 여기를 어떻게 손봐야하는데 모르겠음
-  // 이따가 나중에 처리
+  display: flex;
+  margin: 10px;
+  border-bottom: 1px solid #ddd;
 
   img {
-    display: inline-block;
     @include mediumProfile;
     margin: 10px;
   }
 
   .profileDetail {
-    display: inline-block;
+    margin: auto 0;
+
     .name {
       margin-bottom: 5px;
     }
+
     .role {
       color: $grey;
     }
   }
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: #ddd !important;
 }
