--- a/src/pages/MovieDetail/MovieContent/CommentBox/CommentBox.scss
+++ b/src/pages/MovieDetail/MovieContent/CommentBox/CommentBox.scss
@@ -3,8 +3,10 @@
 .commentBox {
   display: block;
   // width: 294px;
+  // width: 100%;
   background-color: #eee;
-
+  margin: 10px;
+  padding: 10px 20px;
   border-radius: 5px;
 
   .commentTitle {
@@ -78,5 +80,5 @@
 }
 
 .slick-list {
-  width: 500px;
+  width: 580px;
 }
