--- a/src/pages/MovieDetail/MovieContent/movieContent.scss
+++ b/src/pages/MovieDetail/MovieContent/movieContent.scss
@@ -107,6 +107,7 @@
           padding: 10px;
           margin-bottom: 10px;
           border-bottom: 1px solid #ddd;
+
           .contentHeading {
             margin-bottom: 5px;
           }
@@ -121,6 +122,13 @@
 
           .detailContent {
             margin-bottom: 5px;
+            width: 100%;
+            height: 30px;
+            overflow: hidden;
+            // 여기서부터 시작을 할거야
+            white-space: nowrap;
+            // ... 으로 감춰
+            text-overflow: ellipsis;
           }
         }
       }
