--- a/src/pages/MovieDetail/MovieContent/movieContent.scss
+++ b/src/pages/MovieDetail/MovieContent/movieContent.scss
@@ -99,6 +99,7 @@
             font-size: 16px;
             font-weight: normal;
             padding-right: 10px;
+            cursor: pointer;
           }
         }
 
@@ -162,6 +163,7 @@
             span {
               font-size: 15px;
               color: $grey;
+              cursor: pointer;
             }
           }
 
@@ -170,6 +172,7 @@
             font-size: 16px;
             font-weight: normal;
             padding-right: 10px;
+            cursor: pointer;
           }
         }
       }
