--- a/src/pages/MovieDetail/MovieHeader/WantToSee/wantToSee.scss
+++ b/src/pages/MovieDetail/MovieHeader/WantToSee/wantToSee.scss
@@ -114,6 +114,10 @@
       padding: 10px 0;
       color: $pink;
       font-weight: bold;
+
+      .seeCancelBtn {
+        cursor: pointer;
+      }
     }
   }
 }
