--- a/src/components/Nav/Login/login.scss
+++ b/src/components/Nav/Login/login.scss
@@ -8,6 +8,7 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 2;
 
   .modalContainer {
     width: 375px;
@@ -59,7 +60,7 @@
           border-radius: 7px;
         }
 
-        .signupBtn {
+        .loginBtn {
           font-size: 17px;
           font-weight: 500;
           height: 44px;
