--- a/src/pages/MovieDetail/MovieHeader/movieHeader.scss
+++ b/src/pages/MovieDetail/MovieHeader/movieHeader.scss
@@ -97,29 +97,41 @@
                 border-right: 1px solid crimson;
                 cursor: pointer;
 
-                .plusIcon {
-                  font-size: 25px;
-                  margin-right: 10px;
+                .plusIconWrapper {
+                  padding: 0;
+                  .plusIcon {
+                    transition: 0.5s;
+                    font-size: 17px;
+                    margin: 0 20px;
+                    &:hover {
+                      transform: rotate(60deg);
+                      transition: 0.5s;
+                    }
+                  }
                 }
 
                 .wantToSee {
                   // display: inline-block;
                   display: flex;
                 }
-
-                .modal {
-                  // display: inline-block;
-                }
               }
 
               // scss 나중에 수정
-              .modal {
+              .modalBtnWrapper {
                 width: 51px;
                 height: 100%;
                 background-color: $pink;
                 border-radius: 0 5px 5px 0;
                 color: #fff;
                 cursor: pointer;
+
+                .modalBtn {
+                  transition: 0.5s;
+                  &:hover {
+                    transform: translateY(5px);
+                    transition: 0.5s;
+                  }
+                }
               }
             }
 
@@ -139,13 +151,4 @@
 
 .displayNone {
   display: none;
-}
-.plusIcon {
-  transition: 0.5s;
-  width: 27px;
-  height: 27px;
-  &:hover {
-    transform: rotate(30deg);
-    transition: 0.5s;
-  }
 }
