--- a/src/pages/MovieDetail/MovieSide/GalleryBox/galleryBox.scss
+++ b/src/pages/MovieDetail/MovieSide/GalleryBox/galleryBox.scss
@@ -1,24 +1,19 @@
-// .GalleryBox {
-//   display: flex;
-//   .galleryPicture {
-//     width: 132px !important;
-//     height: 89px !important;
-//     margin: 10px;
-//     border-radius: 5px;
-//   }
-// }
+@import '../../../../styles/common.scss';
 
-// .slick-slider {
-//   width: 100%;
-//   height: 100%;
+.GalleryBoxWrapper {
+  // @include flex-center;
+  // display: flex;
+  .GalleryWrapper {
+    .slick-list {
+      // width: 300px;
+      height: 111px;
+    }
+  }
 
-//   .slick-list {
-//     width: 315px;
-//     height: 89px;
-//   }
-// }
-
-// .slick-active {
-//   width: 200px;
-//   height: 200px;
-// }
+  // background-color: red;
+  img {
+    display: flex;
+    width: 132px;
+    height: 110px;
+  }
+}
