--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -65,7 +65,7 @@ $lightyellow: #ffdd64;
 @mixin mediumSize {
   width: 10.1em;
   height: 14.6em;
-  border: 1px solid #74747b;
+  border: 1px solid #e6e6e6;
   border-radius: 5px;
 }
 
