--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -52,9 +52,7 @@ $fa-font-path: '~font-awesome/fonts';
           margin: 0 10px;
         }
         .searchInput {
-          background-color: $lightgrey;
-          width: 100%;
-          height: 24px;
+          position: relative;
         }
       }
       .loginBtn {
