[Add] navbar 검색 기능 백엔드 서버 연결 준비 중

--- a/src/components/Nav/Search/search.scss
+++ b/src/components/Nav/Search/search.scss
@@ -35,13 +35,17 @@
   ul {
     li {
       height: 30px;
-      width: 252px;
+      width: 100%;
       padding: 8px 5px;
       margin-bottom: 2px;
       font-size: 15px;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      cursor: pointer;
+      &:hover {
+        background-color: #eeeeee;
+      }
     }
   }
 }
